# ogl

./: CMakeLists.txt  Makefile  README
doc/: CMakeLists.txt  Doxyfile
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  application.cpp  application.hpp  constants.hpp  glew.cpp  glew.hpp  glfw.cpp  glfw.hpp  key_input.cpp  key_input.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh_generation.cpp  mesh_generation.hpp  opengl.cpp  opengl.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_source.cpp  shader_source.hpp  state.cpp  state.hpp  util.cpp  util.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp  window.cpp  window.hpp
src/app/: CMakeLists.txt  application.cpp  application.hpp  example_meshes.cpp  example_meshes.hpp  examples.cpp  examples.hpp  input.cpp  input.hpp  input_manager.cpp  input_manager.hpp  main.cpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  object_factory.cpp  object_factory.hpp  render_manager.hpp  renderer.cpp  renderer.hpp  resource_manager.cpp  state.cpp  state.hpp  state_manager.cpp  state_manager.hpp  vertex.hpp  wavefront_file.cpp  wavefront_file.hpp  wavefront_parser.cpp  wavefront_parser.hpp  window.hpp  window_manager.hpp
src/app/prototype/: example_meshes.cpp  example_meshes.hpp
src/app/render/: simple_render_manager.cpp  simple_render_manager.hpp  trivial_render_manager.cpp  trivial_render_manager.hpp
src/app/simple/: render_manager.cpp  render_manager.hpp  state_manager.cpp  state_manager.hpp
src/app/state/: simple_state_manager.cpp  simple_state_manager.hpp  trivial_state_manager.cpp  trivial_state_manager.hpp
src/glew/: glew.cpp  glew.hpp
src/glfw/: CMakeLists.txt  api.hpp  glfw.cpp  glfw.hpp  glfw_error.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/ogl/: CMakeLists.txt  init_glfw.cpp  init_glfw.hpp  main.cpp
src/opengl/: CMakeLists.txt  api.hpp  buffer.cpp  buffer.hpp  error.cpp  error.hpp  exceptions.hpp  glew.cpp  glew.hpp  glfw.cpp  glfw.hpp  opengl.cpp  opengl.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  window.cpp  window.hpp
src/opengl/glew/: glew_interface.cpp  glew_interface.hpp
src/opengl/glfw/: glfw.cpp  glfw.hpp  window.cpp  window.hpp
src/opengl/impl/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_interface.cpp  opengl_interface.hpp  opengl_program.cpp  opengl_program.hpp  opengl_shader.cpp  opengl_shader.hpp
src/opengl/linux/: glew.cpp  glew.hpp  opengl_linux.cpp  opengl_linux.hpp
src/resources/: CMakeLists.txt  resource_manager.cpp  resource_manager.hpp  resources.cpp  resources.hpp
src/resources/shaders/: shaders.cpp  shaders.hpp
src/scene/: component.cpp  component.hpp  directional_light.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  vertex.hpp
src/shaders/: default_fragment_shader.glsl  default_vertex_shader.glsl  fragment_shader.glsl  shader_manager.cpp  shader_manager.hpp  shader_sources.cpp  shader_sources.hpp  vertex_shader.glsl
src/tests/: CMakeLists.txt  main.cpp
src/tests/app/: application_tests.cpp
src/tests/glfw/: mock_api.hpp  window_manager_tests.cpp  window_tests.cpp
src/tests/glfw/mock/: api.hpp  window_manager.hpp
src/util/: CMakeLists.txt  cleanup.hpp  constants.hpp  debug.cpp  debug.hpp  exceptions.hpp  misc.cpp  misc.hpp  random.cpp  random.hpp  strings.cpp  strings.hpp
src/window/: CMakeLists.txt  window.cpp  window.hpp  window_key.hpp  window_manager.hpp
src/window/glfw/: glfw_interface.cpp  glfw_interface.hpp  glfw_window.cpp  glfw_window.hpp
src/window/impl/: glfw_interface.cpp  glfw_interface.hpp  glfw_window.cpp  glfw_window.hpp
