#
# src/glfw/CMakeLists.txt
# Chris Vig (chris@invictus.so)
#

# -- Project Configuration --

# Project name
set(GLFW_LIBRARY_NAME oglglfw)

# Project macro
string(TOUPPER ${GLFW_LIBRARY_NAME} GLFW_LIBRARY_NAME_UPPER)
list(APPEND GLFW_LIBRARY_COMPILE_DEFINITIONS -DOGL_${GLFW_LIBRARY_NAME_UPPER})

# Source files
set(GLFW_LIBRARY_SOURCES
  window.cpp
  window_manager.cpp)

# -- GLFW Library --

# Include GLFW library
pkg_check_modules(GLFW REQUIRED glfw3)
list(APPEND GLFW_LIBRARY_INCLUDE_DIRECTORIES ${GLFW_INCLUDE_DIRS})
list(APPEND GLFW_LIBRARY_COMPILE_OPTIONS ${GLFW_CFLAGS_OTHER})
list(APPEND GLFW_LIBRARY_LINK_DIRECTORIES ${GLFW_LIBRARY_DIRS})
list(APPEND GLFW_LIBRARY_LINK_LIBRARIES ${GLFW_LIBRARIES})

# -- Target Definition --

add_library(${GLFW_LIBRARY_NAME} STATIC
  ${GLFW_LIBRARY_SOURCES})
target_compile_definitions(${GLFW_LIBRARY_NAME}
  PRIVATE ${GLFW_LIBRARY_COMPILE_DEFINITIONS})
target_include_directories(${GLFW_LIBRARY_NAME}
  PRIVATE ${GLFW_LIBRARY_INCLUDE_DIRECTORIES})
target_compile_options(${GLFW_LIBRARY_NAME}
  PRIVATE ${GLFW_LIBRARY_COMPILE_OPTIONS})
target_link_libraries(${GLFW_LIBRARY_NAME}
  PUBLIC ${GLFW_LIBRARY_LINK_LIBRARIES})

# -- Exports --

set(GLFW_LIBRARY_NAME ${GLFW_LIBRARY_NAME} PARENT_SCOPE)
