#
# src/tests/CMakeLists.txt
# Chris Vig (chris@invictus.so)
#

# -- Project Configuration --

# Project name
set(TESTS_EXECUTABLE_NAME tests)

# Project macro
string(TOUPPER ${TESTS_EXECUTABLE_NAME} TESTS_EXECUTABLE_NAME_UPPER)
list(APPEND TESTS_EXECUTABLE_COMPILE_DEFINITIONS -DOGL_${TESTS_EXECUTABLE_NAME_UPPER})

# Source files
set(TESTS_EXECUTABLE_SOURCES
  main.cpp)

# Libraries
set(TESTS_EXECUTABLE_LINK_LIBRARIES
  ${APP_LIBRARY_NAME}
  ${GLFW_LIBRARY_NAME}
  ${UTIL_LIBRARY_NAME})

# -- Google Test --

# Include Google Test, Google Mock, and pthread
list(APPEND TESTS_EXECUTABLE_LINK_LIBRARIES gtest gtest_main)
list(APPEND TESTS_EXECUTABLE_LINK_LIBRARIES gmock gmock_main)
list(APPEND TESTS_EXECUTABLE_LINK_LIBRARIES pthread)

# -- Target Definition --

add_executable(${TESTS_EXECUTABLE_NAME}
  ${TESTS_EXECUTABLE_SOURCES})
target_compile_definitions(${TESTS_EXECUTABLE_NAME}
  PRIVATE ${TESTS_EXECUTABLE_COMPILE_DEFINITIONS})
target_include_directories(${TESTS_EXECUTABLE_NAME}
  PRIVATE ${TESTS_EXECUTABLE_INCLUDE_DIRECTORIES})
target_link_libraries(${TESTS_EXECUTABLE_NAME}
  ${TESTS_EXECUTABLE_LINK_LIBRARIES})

# -- Exports --

set(TESTS_EXECUTABLE_NAME ${TESTS_EXECUTABLE_NAME} PARENT_SCOPE)
